refactor(sonar): resolve critical and major code smells across the project