@@ -26,7 +26,6 @@ import com.src.filmtracker.services.users.IUserService;
 import com.src.filmtracker.services.users.UserService;
 import com.src.filmtracker.utils.AppConstants;
 import com.src.filmtracker.utils.CustomAlertHelper;
-import com.src.filmtracker.utils.InputValidator;
 import com.src.filmtracker.utils.SessionManager;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
@@ -41,19 +40,37 @@ import javafx.scene.paint.Color;
 import javafx.scene.text.TextAlignment;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
+import javafx.stage.Window;
 
 import java.io.File;
 import java.io.IOException;
+import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-import java.time.ZoneOffset;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
-import javafx.stage.Window;
 
 public class ShowDetailController {
+
+    private static final String STYLE_BTN_TRANSPARENT_RED = "-fx-background-color: transparent; -fx-text-fill: #e50914; -fx-cursor: hand; -fx-underline: true;";
+    private static final String STYLE_BTN_TRANSPARENT_ORANGE = "-fx-background-color: transparent; -fx-text-fill: #ff9800; -fx-cursor: hand; -fx-underline: true;";
+    private static final String STYLE_BTN_TRANSPARENT_GREEN = "-fx-background-color: transparent; -fx-text-fill: #4caf50; -fx-cursor: hand; -fx-underline: true;";
+    private static final String STYLE_BTN_TRANSPARENT_GREY = "-fx-background-color: transparent; -fx-text-fill: #aaaaaa; -fx-cursor: hand; -fx-underline: true;";
+    private static final String STYLE_BTN_DARK_GREY = "-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-cursor: hand;";
+    private static final String STYLE_BTN_DARK_GREY_RADIUS = "-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4;";
+    private static final String STYLE_BTN_RED_RADIUS = "-fx-background-color: #e50914; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4;";
+    private static final String STYLE_INPUT_BG = "-fx-control-inner-background: #2a2a2a; -fx-text-inner-color: white;";
+    private static final String STYLE_CARD_BG = "-fx-background-color: #151515; -fx-padding: 15; -fx-background-radius: 8; -fx-border-color: #333;";
+    private static final String STYLE_COMMENT_BG = "-fx-background-color: #1a1a1a; -fx-padding: 8; -fx-background-radius: 5;";
+    private static final String STYLE_DISABLED_STAR = "-fx-font-size: 28px; -fx-text-fill: #555555; -fx-cursor: hand;";
+    private static final String STYLE_ACTIVE_STAR = "-fx-font-size: 28px; -fx-text-fill: #ff9800; -fx-cursor: hand;";
+    
+    private static final String TEXT_ELIMINAR = "Eliminar";
+    private static final String TEXT_QUITAR_IMAGEN = "Quitar Imagen";
+    private static final String TEXT_USUARIO_DEF = "@Usuario";
+    private static final String TEXT_DESCONOCIDO = "Desconocido";
 
     @FXML private Label titleLabel;
     @FXML private Label ratingLabel;
@@ -85,6 +102,7 @@ public class ShowDetailController {
     private Image fallbackErrorImage;
 
     public ShowDetailController() {
+        // Constructor por defecto
     }
 
     @FXML
@@ -133,9 +151,9 @@ public class ShowDetailController {
         cargarDatosBasicosUI(basicShow);
         inyectarBotonesLibreria();
 
-        apiService.getFullShowDetails(currentTvmazeId).thenAccept(fullData -> {
-            Platform.runLater(() -> procesarDatosDetallados(fullData));
-        }).exceptionally(e -> {
+        apiService.getFullShowDetails(currentTvmazeId).thenAccept(fullData -> 
+            Platform.runLater(() -> procesarDatosDetallados(fullData))
+        ).exceptionally(e -> {
             App.procesarErrorCritico(e);
             return null;
         });
@@ -161,16 +179,13 @@ public class ShowDetailController {
         if (fullData != null) {
             if (fullData.show() != null) {
                 cargarDatosBasicosUI(fullData.show());
-                
                 if (fullData.show().genres() != null) {
                     cargarSeriesSimilaresMultigenero(fullData.show().genres());
                 }
             }
-            
             if (fullData.cast() != null) {
                 actualizarCastUI(fullData.cast());
             }
-            
             if (fullData.seasons() != null) {
                 actualizarTemporadasUI(fullData.seasons());
             }
@@ -182,44 +197,25 @@ public class ShowDetailController {
             return; 
         }
         
-        String nombreSeguro = "Desconocido";
-        
-        if (show.name() != null) {
-            nombreSeguro = show.name();
-        }
-        
-        titleLabel.setText(nombreSeguro);
-        
-        String statusSeguro = "N/A";
-        
-        if (show.status() != null) {
-            statusSeguro = show.status();
-        }
-        
-        statusLabel.setText("Status: " + statusSeguro);
+        titleLabel.setText(show.name() != null ? show.name() : TEXT_DESCONOCIDO);
+        statusLabel.setText("Status: " + (show.status() != null ? show.status() : "N/A"));
         
         if (show.genres() != null) {
             genresLabel.setText("Géneros: " + String.join(", ", show.genres()));
         }
         
         String rating = "N/A";
-        
-        if (show.rating() != null) {
-            if (show.rating().average() != null) {
-                rating = String.valueOf(show.rating().average());
-            }
+        if (show.rating() != null && show.rating().average() != null) {
+            rating = String.valueOf(show.rating().average());
         }
-        
         ratingLabel.setText("⭐ " + rating);
         
         if (show.summary() != null) {
-            summaryLabel.setText(show.summary().replaceAll("<[^>]*>", ""));
+            summaryLabel.setText(show.summary().replaceAll("<.*?>", ""));
         }
         
-        if (show.image() != null) {
-            if (show.image().original() != null) {
-                cargarImagenConRespaldo(show.image().original(), posterDetail);
-            }
+        if (show.image() != null && show.image().original() != null) {
+            cargarImagenConRespaldo(show.image().original(), posterDetail);
         }
     }
 
@@ -232,13 +228,12 @@ public class ShowDetailController {
         libBox.setAlignment(Pos.CENTER_LEFT);
         
         Button favBtn = new Button("Cargando...");
-        favBtn.setStyle("-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4;");
+        favBtn.setStyle(STYLE_BTN_DARK_GREY_RADIUS);
         
         Button watchBtn = new Button("Cargando...");
-        watchBtn.setStyle("-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4;");
+        watchBtn.setStyle(STYLE_BTN_DARK_GREY_RADIUS);
         
-        libBox.getChildren().add(favBtn);
-        libBox.getChildren().add(watchBtn);
+        libBox.getChildren().addAll(favBtn, watchBtn);
         
         VBox infoPadre = (VBox) titleLabel.getParent();
         infoPadre.getChildren().add(libBox);
@@ -257,17 +252,14 @@ public class ShowDetailController {
                 finalizarConfiguracionFav(btn, false);
                 return;
             }
-            
             if (evaluarListaParaId(list, currentTvmazeId)) {
                 finalizarConfiguracionFav(btn, true);
                 return;
             }
-            
             if (list.size() == 10) {
                 buscarEnFavoritosRecursivo(page + 1, btn);
                 return;
             }
-            
             finalizarConfiguracionFav(btn, false);
         }).exceptionally(err -> {
             App.procesarErrorCritico(err);
@@ -279,10 +271,7 @@ public class ShowDetailController {
     private void finalizarConfiguracionFav(Button btn, boolean isFav) {
         Platform.runLater(() -> {
             actualizarAparienciaFav(btn, isFav);
-            
-            btn.setOnAction(e -> {
-                handleToggleFav(btn);
-            });
+            btn.setOnAction(e -> handleToggleFav(btn));
         });
     }
 
@@ -305,11 +294,7 @@ public class ShowDetailController {
                 Platform.runLater(() -> {
                     if (!App.procesarErrorCritico(err)) {
                         actualizarAparienciaFav(btn, false);
-                        if (err.toString().contains("409")) {
-                            mostrarAlertaError(AppConstants.MESSAGE_ERROR_DUPLICATE_LIB);
-                        } else {
-                            mostrarAlertaError(AppConstants.MESSAGE_ERROR_API);
-                        }
+                        mostrarAlertaError(err.toString().contains("409") ? AppConstants.MESSAGE_ERROR_DUPLICATE_LIB : AppConstants.MESSAGE_ERROR_API);
                     }
                 });
                 return null;
@@ -320,10 +305,10 @@ public class ShowDetailController {
     private void actualizarAparienciaFav(Button btn, boolean isFav) {
         if (isFav) {
             btn.setText("Quitar de Favoritos (💔)");
-            btn.setStyle("-fx-background-color: #e50914; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4;");
+            btn.setStyle(STYLE_BTN_RED_RADIUS);
         } else {
             btn.setText("Añadir a Favoritos (❤️)");
-            btn.setStyle("-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4;");
+            btn.setStyle(STYLE_BTN_DARK_GREY_RADIUS);
         }
     }
 
@@ -337,17 +322,14 @@ public class ShowDetailController {
                 finalizarConfiguracionWatch(btn, false);
                 return;
             }
-            
             if (evaluarListaParaId(list, currentTvmazeId)) {
                 finalizarConfiguracionWatch(btn, true);
                 return;
             }
-            
             if (list.size() == 10) {
                 buscarEnWatchlistRecursivo(page + 1, btn);
                 return;
             }
-            
             finalizarConfiguracionWatch(btn, false);
         }).exceptionally(err -> {
             App.procesarErrorCritico(err);
@@ -359,22 +341,16 @@ public class ShowDetailController {
     private void finalizarConfiguracionWatch(Button btn, boolean isWatch) {
         Platform.runLater(() -> {
             actualizarAparienciaWatch(btn, isWatch);
-            
-            btn.setOnAction(e -> {
-                handleToggleWatch(btn);
-            });
+            btn.setOnAction(e -> handleToggleWatch(btn));
         });
     }
     
     private boolean evaluarListaParaId(List<LibraryItemDto> list, Integer targetId) {
         for (LibraryItemDto item : list) {
-            if (item.tvmazeId() != null) {
-                if (item.tvmazeId().equals(targetId)) {
-                    return true;
-                }
+            if (item.tvmazeId() != null && item.tvmazeId().equals(targetId)) {
+                return true;
             }
         }
-        
         return false;
     }
 
@@ -397,11 +373,7 @@ public class ShowDetailController {
                 Platform.runLater(() -> {
                     if (!App.procesarErrorCritico(err)) {
                         actualizarAparienciaWatch(btn, false);
-                        if (err.toString().contains("409")) {
-                            mostrarAlertaError(AppConstants.MESSAGE_ERROR_DUPLICATE_LIB);
-                        } else {
-                            mostrarAlertaError(AppConstants.MESSAGE_ERROR_API);
-                        }
+                        mostrarAlertaError(err.toString().contains("409") ? AppConstants.MESSAGE_ERROR_DUPLICATE_LIB : AppConstants.MESSAGE_ERROR_API);
                     }
                 });
                 return null;
@@ -412,17 +384,16 @@ public class ShowDetailController {
     private void actualizarAparienciaWatch(Button btn, boolean isWatch) {
         if (isWatch) {
             btn.setText("Quitar de Watchlist (➖)");
-            btn.setStyle("-fx-background-color: #e50914; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4;");
+            btn.setStyle(STYLE_BTN_RED_RADIUS);
         } else {
             btn.setText("Añadir a Watchlist (➕)");
-            btn.setStyle("-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4;");
+            btn.setStyle(STYLE_BTN_DARK_GREY_RADIUS);
         }
     }
 
     private void actualizarCastUI(List<CastDto> cast) {
         castContainer.getChildren().clear();
         scrollCast.setHvalue(0.0);
-        
         if (cast != null) {
             for (CastDto m : cast) {
                 castContainer.getChildren().add(buildPersonBox(m));
@@ -432,7 +403,6 @@ public class ShowDetailController {
 
     private void actualizarTemporadasUI(List<SeasonDto> seasons) {
         episodesContainer.getChildren().clear();
-        
         if (seasons != null) {
             for (SeasonDto s : seasons) {
                 if (s.number() != null) {
@@ -443,60 +413,46 @@ public class ShowDetailController {
     }
 
     private void cargarSeriesSimilaresMultigenero(List<String> genres) {
-        if (genres == null) {
-            return;
-        }
-        
-        if (genres.isEmpty()) {
+        if (genres == null || genres.isEmpty()) {
             return;
         }
         
         List<CompletableFuture<List<Show>>> futures = new ArrayList<>();
-        
         for (String g : genres) {
             futures.add(apiService.getShowsByGenre(g));
         }
 
         CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
-            .thenApply(v -> {
-                return mapearShowsSimilares(futures);
-            })
+            .thenApply(v -> mapearShowsSimilares(futures))
             .thenAccept(combined -> {
                 Collections.shuffle(combined);
                 List<Show> limited = combined.stream().limit(AppConstants.HOME_CAROUSEL_LIMIT).toList();
-                
-                Platform.runLater(() -> {
-                    renderSimilarCarousel(limited);
-                });
+                Platform.runLater(() -> renderSimilarCarousel(limited));
             });
     }
 
     private List<Show> mapearShowsSimilares(List<CompletableFuture<List<Show>>> futures) {
         List<Show> result = new ArrayList<>();
         Set<Integer> seen = new HashSet<>();
-        
         for (CompletableFuture<List<Show>> f : futures) {
             try {
                 List<Show> list = f.join();
-                
                 if (list != null) {
                     for (Show s : list) {
                         procesarShowSimilar(s, seen, result);
                     }
                 }
             } catch (Exception e) { 
+                // Ignorado intencionalmente 
             }
         }
-        
         return result;
     }
 
     private void procesarShowSimilar(Show s, Set<Integer> seen, List<Show> result) {
-        if (s.tvmazeId() != null) {
-            if (!s.tvmazeId().equals(currentTvmazeId)) {
-                if (seen.add(s.tvmazeId())) {
-                    result.add(s);
-                }
+        if (s.tvmazeId() != null && !s.tvmazeId().equals(currentTvmazeId)) {
+            if (seen.add(s.tvmazeId())) {
+                result.add(s);
             }
         }
     }
@@ -504,19 +460,13 @@ public class ShowDetailController {
     private void renderSimilarCarousel(List<Show> shows) {
         similarShowsSection.getChildren().clear();
         
-        if (shows == null) {
-            mostrarVacio(similarShowsSection, AppConstants.MESSAGE_INFO_NO_SIMILAR);
-            return;
-        }
-        
-        if (shows.isEmpty()) {
+        if (shows == null || shows.isEmpty()) {
             mostrarVacio(similarShowsSection, AppConstants.MESSAGE_INFO_NO_SIMILAR);
             return;
         }
         
         HBox content = new HBox(15); 
         content.setPadding(new Insets(10));
-        
         for (Show s : shows) {
             injectShowCard(s, content);
         }
@@ -526,26 +476,18 @@ public class ShowDetailController {
         sp.setStyle("-fx-background-color: transparent; -fx-background: transparent;");
         sp.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
 
-        String btnStyle = "-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-font-size: 16px; -fx-padding: 8 15; -fx-cursor: hand; -fx-background-radius: 3;";
-        
         Button bI = new Button("<"); 
-        bI.setStyle(btnStyle);
+        bI.setStyle(STYLE_BTN_DARK_GREY);
         
         Button bD = new Button(">"); 
-        bD.setStyle(btnStyle);
+        bD.setStyle(STYLE_BTN_DARK_GREY);
         
-        bI.setOnAction(e -> {
-            moverCarruselDinamico(sp, -1);
-        }); 
-        
-        bD.setOnAction(e -> {
-            moverCarruselDinamico(sp, 1);
-        });
+        bI.setOnAction(e -> moverCarruselDinamico(sp, -1)); 
+        bD.setOnAction(e -> moverCarruselDinamico(sp, 1));
         
         BorderPane bp = new BorderPane(sp); 
         bp.setLeft(bI); 
         bp.setRight(bD);
-        
         BorderPane.setAlignment(bI, Pos.CENTER); 
         BorderPane.setAlignment(bD, Pos.CENTER);
         
@@ -560,7 +502,6 @@ public class ShowDetailController {
 
     private VBox createSeasonAccordion(SeasonDto s) {
         VBox c = new VBox();
-        
         HBox h = new HBox();
         h.setAlignment(Pos.CENTER_LEFT);
         h.setStyle("-fx-background-color: #1e1e1e; -fx-padding: 10; -fx-cursor: hand;");
@@ -575,9 +516,7 @@ public class ShowDetailController {
         Label lblIndicator = new Label("Episodios ▼");
         lblIndicator.setTextFill(Color.LIGHTGRAY);
         
-        h.getChildren().add(lblTitle);
-        h.getChildren().add(spacer);
-        h.getChildren().add(lblIndicator);
+        h.getChildren().addAll(lblTitle, spacer, lblIndicator);
         
         VBox eps = new VBox(); 
         eps.setVisible(false); 
@@ -586,22 +525,18 @@ public class ShowDetailController {
         
         configurarEventoAcordeon(h, eps, lblIndicator, s.number());
         
-        c.getChildren().add(h);
-        c.getChildren().add(eps);
-        
+        c.getChildren().addAll(h, eps);
         return c;
     }
 
     private void configurarEventoAcordeon(HBox header, VBox eps, Label lblIndicator, int seasonNumber) {
         header.setOnMouseClicked(e -> {
             boolean mostrar = !eps.isVisible();
-            
             eps.setVisible(mostrar);
             eps.setManaged(mostrar);
             
             if (mostrar) {
                 lblIndicator.setText("Episodios ▲");
-                
                 if (eps.getChildren().isEmpty()) {
                     renderEpisodes(seasonNumber, eps);
                 }
@@ -615,12 +550,7 @@ public class ShowDetailController {
         container.getChildren().clear();
         List<EpisodeDto> list = seasonEpisodesMap.get(num);
         
-        if (list == null) {
-            mostrarVacio(container, "No hay episodios disponibles para esta temporada.");
-            return;
-        }
-        
-        if (list.isEmpty()) {
+        if (list == null || list.isEmpty()) {
             mostrarVacio(container, "No hay episodios disponibles para esta temporada.");
             return;
         }
@@ -638,26 +568,18 @@ public class ShowDetailController {
         sp.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
         sp.setStyle("-fx-background-color: transparent; -fx-background: transparent;");
 
-        String btnStyle = "-fx-background-color: #1e1e1e; -fx-text-fill: white; -fx-font-size: 18px; -fx-cursor: hand;";
-        
         Button bI = new Button("<"); 
-        bI.setStyle(btnStyle);
+        bI.setStyle(STYLE_BTN_DARK_GREY);
         
         Button bD = new Button(">"); 
-        bD.setStyle(btnStyle);
+        bD.setStyle(STYLE_BTN_DARK_GREY);
         
-        bI.setOnAction(e -> {
-            moverCarruselDinamico(sp, -1);
-        });
-        
-        bD.setOnAction(e -> {
-            moverCarruselDinamico(sp, 1);
-        });
+        bI.setOnAction(e -> moverCarruselDinamico(sp, -1));
+        bD.setOnAction(e -> moverCarruselDinamico(sp, 1));
 
         BorderPane interactiveCarousel = new BorderPane(sp);
         interactiveCarousel.setLeft(bI); 
         interactiveCarousel.setRight(bD);
-        
         BorderPane.setAlignment(bI, Pos.CENTER); 
         BorderPane.setAlignment(bD, Pos.CENTER);
 
@@ -675,37 +597,22 @@ public class ShowDetailController {
         iv.setFitHeight(133);
         
         boolean tieneImagen = false;
-        
-        if (ep.image() != null) {
-            if (ep.image().medium() != null) {
-                if (!ep.image().medium().isEmpty()) {
-                    cargarImagenConRespaldo(ep.image().medium(), iv);
-                    tieneImagen = true;
-                }
-            }
+        if (ep.image() != null && ep.image().medium() != null && !ep.image().medium().isEmpty()) {
+            cargarImagenConRespaldo(ep.image().medium(), iv);
+            tieneImagen = true;
         }
         
         if (!tieneImagen) {
             ponerImagenError(iv);
         }
 
-        String name = "Desconocido";
-        
-        if (ep.name() != null) {
-            name = ep.name();
-        }
-        
+        String name = ep.name() != null ? ep.name() : TEXT_DESCONOCIDO;
         Label title = new Label(String.format("S%dE%d - %s", ep.season(), ep.number(), name));
         title.setTextFill(Color.WHITE);
         title.setStyle("-fx-font-weight: bold; -fx-font-size: 14px;");
         title.setWrapText(true);
 
-        String infoText = "N/A";
-        
-        if (ep.airdate() != null) {
-            infoText = ep.airdate();
-        }
-        
+        String infoText = ep.airdate() != null ? ep.airdate() : "N/A";
         if (ep.runtime() != null) {
             infoText += " | " + ep.runtime() + " min";
         }
@@ -714,31 +621,20 @@ public class ShowDetailController {
         info.setTextFill(Color.web("#aaaaaa")); 
         info.setStyle("-fx-font-size: 12px;");
 
-        Label summary = new Label();
-        
-        if (ep.summary() != null) {
-            summary.setText(ep.summary().replaceAll("<[^>]*>", ""));
-        } else {
-            summary.setText("Sin descripción disponible.");
-        }
-        
+        Label summary = new Label(ep.summary() != null ? ep.summary().replaceAll("<.*?>", "") : "Sin descripción disponible.");
         summary.setTextFill(Color.web("#cccccc"));
         summary.setWrapText(true);
         summary.setPrefHeight(60); 
         summary.setTextAlignment(TextAlignment.JUSTIFY);
 
-        card.getChildren().add(iv);
-        card.getChildren().add(title);
-        card.getChildren().add(info);
-        card.getChildren().add(summary);
-        
+        card.getChildren().addAll(iv, title, info, summary);
         return card;
     }
 
     private void cargarResenas(int page) {
-        reviewService.getShowReviews(currentTvmazeId, page).thenAccept(res -> {
-            Platform.runLater(() -> dibujarSeccionResenas(res, page, false));
-        }).exceptionally(e -> {
+        reviewService.getShowReviews(currentTvmazeId, page).thenAccept(res -> 
+            Platform.runLater(() -> dibujarSeccionResenas(res, page, false))
+        ).exceptionally(e -> {
             Platform.runLater(() -> {
                 if (!App.procesarErrorCritico(e)) {
                     dibujarSeccionResenas(null, page, true);
@@ -765,21 +661,7 @@ public class ShowDetailController {
             return;
         }
         
-        if (res == null) {
-            if (page == 1) {
-                mostrarVacio(reviewsSection, "No hay reseñas aún. ¡Sé el primero!");
-            }
-            return;
-        }
-        
-        if (res.reviews() == null) {
-            if (page == 1) {
-                mostrarVacio(reviewsSection, "No hay reseñas aún. ¡Sé el primero!");
-            }
-            return;
-        }
-        
-        if (res.reviews().isEmpty()) {
+        if (res == null || res.reviews() == null || res.reviews().isEmpty()) {
             if (page == 1) {
                 mostrarVacio(reviewsSection, "No hay reseñas aún. ¡Sé el primero!");
             }
@@ -796,7 +678,6 @@ public class ShowDetailController {
     private void removerBotonCargarMasResenas() {
         if (!reviewsSection.getChildren().isEmpty()) {
             int lastIndex = reviewsSection.getChildren().size() - 1;
-            
             if (reviewsSection.getChildren().get(lastIndex) instanceof HBox) {
                 reviewsSection.getChildren().remove(lastIndex);
             }
@@ -804,53 +685,39 @@ public class ShowDetailController {
     }
 
     private void evaluarBotonCargarMasResenas(PaginationDto pag) {
-        if (pag != null) {
-            if (pag.hasNextPage() != null) {
-                if (pag.hasNextPage()) {
-                    Button btnMore = new Button("Cargar más reseñas");
-                    btnMore.setStyle("-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4; -fx-padding: 8 15;");
-                    
-                    btnMore.setOnAction(e -> {
-                        currentReviewPage++;
-                        cargarResenas(currentReviewPage);
-                    });
-                    
-                    HBox centerBox = new HBox(btnMore);
-                    centerBox.setAlignment(Pos.CENTER);
-                    centerBox.setPadding(new Insets(10, 0, 10, 0));
-                    
-                    reviewsSection.getChildren().add(centerBox);
-                }
-            }
+        if (pag != null && Boolean.TRUE.equals(pag.hasNextPage())) {
+            Button btnMore = new Button("Cargar más reseñas");
+            btnMore.setStyle(STYLE_BTN_DARK_GREY_RADIUS + " -fx-padding: 8 15;");
+            
+            btnMore.setOnAction(e -> {
+                currentReviewPage++;
+                cargarResenas(currentReviewPage);
+            });
+            
+            HBox centerBox = new HBox(btnMore);
+            centerBox.setAlignment(Pos.CENTER);
+            centerBox.setPadding(new Insets(10, 0, 10, 0));
+            reviewsSection.getChildren().add(centerBox);
         }
     }
 
     private File openImageChooser() {
         FileChooser fc = new FileChooser();
         fc.setTitle("Seleccionar Imagen");
-        
         FileChooser.ExtensionFilter filter = new FileChooser.ExtensionFilter("Imágenes", "*.png", "*.jpg", "*.jpeg");
         fc.getExtensionFilters().add(filter);
-        
         return fc.showOpenDialog(titleLabel.getScene().getWindow());
     }
 
     private void inyectarImagenSiExiste(String url, VBox card) {
-        if (url == null) {
+        if (url == null || url.isEmpty()) {
             return;
         }
-        
-        if (url.isEmpty()) {
-            return;
-        }
-        
         ImageView iv = new ImageView();
         iv.setFitWidth(300);
         iv.setPreserveRatio(true);
         iv.setStyle("-fx-background-radius: 5;");
-        
         cargarImagenConRespaldo(url, iv);
-        
         card.getChildren().add(iv);
     }
 
@@ -860,11 +727,12 @@ public class ShowDetailController {
         
         Label errLbl = new Label(); 
         errLbl.setTextFill(Color.web(AppConstants.COLOR_ACCENT)); 
-        errLbl.setVisible(false);
+        errLbl.setVisible(false); 
+        errLbl.setManaged(false);
         
         TextField titleIn = new TextField(); 
         titleIn.setPromptText("Título");
-        titleIn.setStyle("-fx-control-inner-background: #2a2a2a; -fx-text-inner-color: white;");
+        titleIn.setStyle(STYLE_INPUT_BG);
         
         int[] ratingState = new int[]{0};
         HBox starBox = buildStarRatingComponent(ratingState, 0);
@@ -872,13 +740,13 @@ public class ShowDetailController {
         TextArea contIn = new TextArea(); 
         contIn.setPromptText("Tu reseña..."); 
         contIn.setPrefRowCount(3);
-        contIn.setStyle("-fx-control-inner-background: #2a2a2a; -fx-text-inner-color: white;");
+        contIn.setStyle(STYLE_INPUT_BG);
         
         Label fileLabel = new Label("Sin imagen");
         fileLabel.setTextFill(Color.GRAY);
         
         Button attachBtn = new Button("Adjuntar Imagen");
-        attachBtn.setStyle("-fx-background-color: #333; -fx-text-fill: white; -fx-cursor: hand;");
+        attachBtn.setStyle(STYLE_BTN_DARK_GREY);
         
         attachBtn.setOnAction(e -> {
             File file = openImageChooser();
@@ -888,40 +756,29 @@ public class ShowDetailController {
             }
         });
 
-        HBox fileBox = new HBox(10);
+        HBox fileBox = new HBox(10, attachBtn, fileLabel);
         fileBox.setAlignment(Pos.CENTER_LEFT);
-        fileBox.getChildren().add(attachBtn);
-        fileBox.getChildren().add(fileLabel);
 
         Button btn = new Button("Publicar"); 
-        btn.setStyle("-fx-background-color: #e50914; -fx-text-fill: white; -fx-cursor: hand;");
+        btn.setStyle(STYLE_BTN_RED_RADIUS);
+        btn.setOnAction(e -> enviarResena(ratingState, titleIn, contIn, errLbl));
         
-        btn.setOnAction(e -> {
-            enviarResena(ratingState, titleIn, contIn, errLbl);
-        });
-        
-        form.getChildren().add(new Label("Escribe una reseña:"));
-        form.getChildren().add(errLbl);
-        form.getChildren().add(titleIn);
-        form.getChildren().add(starBox);
-        form.getChildren().add(contIn);
-        form.getChildren().add(fileBox);
-        form.getChildren().add(btn);
-        
+        form.getChildren().addAll(new Label("Escribe una reseña:"), errLbl, titleIn, starBox, contIn, fileBox, btn);
         return form;
     }
 
     private void enviarResena(int[] ratingState, TextField titleIn, TextArea contIn, Label errLbl) {
         UserDto currentUser = SessionManager.getInstance().getCurrentUser();
-        
         if (currentUser != null && !currentUser.isVerified()) {
             mostrarAlertaPrecaucion(AppConstants.MESSAGE_ERROR_UNVERIFIED);
             return;
         }
         
-        if (!validateInputs(ratingState, titleIn, contIn, errLbl)) {
+        if (ratingState == null || ratingState.length == 0 || ratingState[0] == 0 || titleIn.getText().isBlank() || contIn.getText().isBlank()) {
             return;
         }
+        errLbl.setVisible(false); 
+        errLbl.setManaged(false);
         
         ReviewRequest req = new ReviewRequest(currentTvmazeId, ratingState[0], titleIn.getText().trim(), contIn.getText().trim());
         
@@ -930,66 +787,19 @@ public class ShowDetailController {
                 reviewService.uploadReviewImage(review.getSafeId(), selectedReviewImage).thenRun(this::limpiarYRefrescarResenas);
                 return;
             }
-            
             limpiarYRefrescarResenas();
-            
         }).exceptionally(err -> {
             Platform.runLater(() -> {
                 if (!App.procesarErrorCritico(err)) {
-                    if (err.toString().contains("409")) {
-                        mostrarAlertaError(AppConstants.MESSAGE_ERROR_DUPLICATE_REVIEW);
-                    } else {
-                        mostrarAlertaError(AppConstants.MESSAGE_ERROR_REVIEW_ACTION);
-                    }
+                    mostrarAlertaError(err.toString().contains("409") ? AppConstants.MESSAGE_ERROR_DUPLICATE_REVIEW : AppConstants.MESSAGE_ERROR_REVIEW_ACTION);
                 }
             });
             return null;
         });
     }
     
-    private boolean validateInputs(int[] ratingState, TextField titleIn, TextArea contIn, Label errLbl) {
-        errLbl.setVisible(false);
-
-        if (InputValidator.isNullOrEmpty(titleIn.getText()) ||
-                InputValidator.isNullOrEmpty(contIn.getText()))
-        {
-            return mostrarErrorValidacion(AppConstants.MESSAGE_ERROR_EMPTY_FIELDS, errLbl);
-        }
-
-        if (InputValidator.exceedsMaxLength(titleIn.getText(), 50) ||
-                InputValidator.exceedsMaxLength(contIn.getText(), 500))
-                {
-            return mostrarErrorValidacion(AppConstants.MESSAGE_ERROR_MAX_LENGTH, errLbl);
-        }
-
-        if (ratingState != null) {
-            if (ratingState[0] == 0) {
-                return mostrarErrorValidacion(AppConstants.MESSAGE_ERROR_SELECT_RATING, errLbl);
-            }
-        }
-
-        return true;
-    }
-
-    private boolean mostrarErrorValidacion(String mensaje, Label errLbl) {
-        errLbl.setText(mensaje);
-        errLbl.setVisible(true);
-        errLbl.setTextFill(Color.web(AppConstants.COLOR_ACCENT));
-        return false;
-    }
-    
     private void injectReviewActions(ReviewDto review, HBox actions, VBox card) {
-        if (!SessionManager.getInstance().isAuthenticated()) {
-            return;
-        }
-        
-        String ownerId = review.getOwnerId();
-        
-        if (ownerId == null) {
-            return;
-        }
-        
-        if (ownerId.isEmpty()) {
+        if (!SessionManager.getInstance().isAuthenticated() || review.getOwnerId() == null || review.getOwnerId().isEmpty()) {
             return;
         }
         
@@ -997,35 +807,22 @@ public class ShowDetailController {
         String currAuth = currUser.getSafeAuthId();
         boolean isAdmin = "ADMIN".equals(currUser.role());
         
-        if (ownerId.equals(currAuth)) {
+        if (review.getOwnerId().equals(currAuth)) {
             agregarBotonEliminarResena(review.getSafeId(), actions);
-            
             if (isWithinEditWindow(review.created_at())) {
                 agregarBotonEditarResena(review, actions, card);
             }
-            
             return; 
         }
         
         if (isAdmin) {
             agregarBotonesAdminResena(review, actions);
         }
-        
         agregarBotonReportar(review.getSafeId(), "REVIEW", actions);
     }
 
     private void injectCommentActions(CommentDto c, HBox actions, String rId, VBox parent) {
-        if (!SessionManager.getInstance().isAuthenticated()) {
-            return;
-        }
-        
-        String ownerId = c.getOwnerId();
-        
-        if (ownerId == null) {
-            return;
-        }
-        
-        if (ownerId.isEmpty()) {
+        if (!SessionManager.getInstance().isAuthenticated() || c.getOwnerId() == null || c.getOwnerId().isEmpty()) {
             return;
         }
         
@@ -1034,7 +831,7 @@ public class ShowDetailController {
         boolean isAdmin = "ADMIN".equals(currUser.role());
         String cId = c.getSafeId();
         
-        if (ownerId.equals(currAuth)) {
+        if (c.getOwnerId().equals(currAuth)) {
             agregarBotonEliminarComentario(cId, rId, parent, actions);
             return;
         }
@@ -1042,18 +839,13 @@ public class ShowDetailController {
         if (isAdmin) {
             agregarBotonesAdminComentario(c, rId, parent, actions);
         }
-        
         agregarBotonReportar(cId, "COMMENT", actions);
     }
 
     private void agregarBotonReportar(String targetId, String targetType, HBox actions) {
         Button rep = new Button("Reportar");
-        rep.setStyle("-fx-background-color: transparent; -fx-text-fill: #e50914; -fx-cursor: hand; -fx-underline: true;");
-        
-        rep.setOnAction(e -> {
-            com.src.filmtracker.utils.ReportModalHelper.openReportModal(targetType, targetId);
-        });
-        
+        rep.setStyle(STYLE_BTN_TRANSPARENT_RED);
+        rep.setOnAction(e -> com.src.filmtracker.utils.ReportModalHelper.openReportModal(targetType, targetId));
         actions.getChildren().add(rep);
     }
 
@@ -1079,26 +871,18 @@ public class ShowDetailController {
     }
     
     private void mostrarAlertaPrecaucion(String mensaje) {
-        javafx.stage.Window owner = titleLabel.getScene().getWindow();
-        boolean confirmar = com.src.filmtracker.utils.CustomAlertHelper.mostrarPrecaucion("Atención", mensaje, "Verificar ahora", "Cancelar", owner);
-        
-        if (confirmar) {
+        Window owner = titleLabel.getScene().getWindow();
+        if (com.src.filmtracker.utils.CustomAlertHelper.mostrarPrecaucion("Atención", mensaje, "Verificar ahora", "Cancelar", owner)) {
             App.setRoot(AppConstants.FXML_VERIFY_EMAIL);
         }
     }
 
     private String parsearIsoFormato(String isoString) {
-        if (isoString == null) {
+        if (isoString == null || isoString.isEmpty()) {
             return "";
         }
-        
-        if (isoString.isEmpty()) {
-            return "";
-        }
-        
         try {
-            ZonedDateTime zdt = ZonedDateTime.parse(isoString);
-            return zdt.format(DateTimeFormatter.ofPattern("dd MMM yyyy HH:mm"));
+            return ZonedDateTime.parse(isoString).format(DateTimeFormatter.ofPattern("dd MMM yyyy HH:mm"));
         } catch (Exception e) {
             return isoString;
         }
@@ -1111,13 +895,9 @@ public class ShowDetailController {
         if (created.isEmpty()) {
             return "";
         }
-        
-        if (!created.equals(updated)) {
-            if (!updated.isEmpty()) {
-                return created + " (editado " + updated + ")";
-            }
+        if (!created.equals(updated) && !updated.isEmpty()) {
+            return created + " (editado " + updated + ")";
         }
-        
         return created;
     }
 
@@ -1126,54 +906,33 @@ public class ShowDetailController {
         dateLabel.setTextFill(Color.web("#888888"));
         dateLabel.setStyle("-fx-font-size: 11px;");
         
-        HBox header = new HBox(10);
+        HBox header = new HBox(10, authorLabel, dateLabel);
         header.setAlignment(Pos.CENTER_LEFT);
-        
-        header.getChildren().add(authorLabel);
-        header.getChildren().add(dateLabel);
-        
         return header;
     }
 
     private VBox buildReviewCard(ReviewDto review) {
         String rId = review.getSafeId();
         VBox card = new VBox(8);
-        card.setStyle("-fx-background-color: #151515; -fx-padding: 15; -fx-background-radius: 8; -fx-border-color: #333;");
+        card.setStyle(STYLE_CARD_BG);
 
-        Label author = new Label("@Cargando..."); 
+        Label author = new Label(TEXT_USUARIO_DEF); 
         resolverNombreAutor(review.getOwnerId(), author);
-        
         HBox header = buildHeaderWithDate(author, review.created_at(), review.updated_at());
         
-        String tText = "Sin título";
-        
-        if (review.title() != null) {
-            tText = review.title();
-        }
-        
-        Label title = new Label(tText);
+        Label title = new Label(review.title() != null ? review.title() : "Sin título");
         title.setStyle("-fx-font-weight: bold; -fx-font-size: 16px;"); 
         title.setTextFill(Color.WHITE);
         
-        String cText = "";
-        
-        if (review.content() != null) {
-            cText = review.content();
-        }
-        
-        Label content = new Label(cText);
+        Label content = new Label(review.content() != null ? review.content() : "");
         content.setTextFill(Color.LIGHTGRAY); 
         content.setWrapText(true);
 
-        card.getChildren().add(header);
-        card.getChildren().add(title);
-        card.getChildren().add(content);
-        
+        card.getChildren().addAll(header, title, content);
         inyectarImagenSiExiste(review.getImageUrl(), card);
 
         HBox actions = new HBox(15); 
         actions.setAlignment(Pos.CENTER_LEFT);
-        
         HBox likeContainer = buildLikeButtonsResena(rId, review.getLikesCount(), review.getIsLikedValue());
 
         VBox commContainer = new VBox(10); 
@@ -1181,88 +940,60 @@ public class ShowDetailController {
         commContainer.setVisible(false);
         
         Button commBtn = new Button("Comentarios (" + review.getCommentsCount() + ")");
-        commBtn.setStyle("-fx-background-color: transparent; -fx-text-fill: #aaaaaa; -fx-cursor: hand; -fx-underline: true;");
+        commBtn.setStyle(STYLE_BTN_TRANSPARENT_GREY);
         
         commBtn.setOnAction(e -> {
             boolean show = !commContainer.isVisible();
             commContainer.setVisible(show); 
             commContainer.setManaged(show);
-            
-            if (show) {
-                if (!rId.isEmpty()) {
-                    cargarComentariosUI(rId, commContainer, 1);
-                }
+            if (show && !rId.isEmpty()) {
+                cargarComentariosUI(rId, commContainer, 1);
             }
         });
 
-        actions.getChildren().add(likeContainer);
-        actions.getChildren().add(commBtn);
-        
+        actions.getChildren().addAll(likeContainer, commBtn);
         injectReviewActions(review, actions, card);
-        
-        card.getChildren().add(actions);
-        card.getChildren().add(commContainer);
+        card.getChildren().addAll(actions, commContainer);
         
         return card;
     }
 
     private void resolverNombreAutor(String ownerId, Label label) {
-        if (ownerId == null) {
-            label.setText("@Usuario");
+        if (ownerId == null || ownerId.isEmpty()) {
+            label.setText(TEXT_USUARIO_DEF);
             return;
         }
-        
-        if (ownerId.isEmpty()) {
-            label.setText("@Usuario");
-            return;
-        }
-        
         if (userCache.containsKey(ownerId)) {
             UserDto cachedUser = userCache.get(ownerId);
             label.setText("@" + cachedUser.username());
             configurarClicAutor(label, cachedUser);
             return;
         }
-        
-        userService.getUserById(ownerId).thenAccept(user -> {
-            Platform.runLater(() -> {
-                procesarUsuarioObtenido(user, ownerId, label);
-            });
-        });
+        userService.getUserById(ownerId).thenAccept(user -> 
+            Platform.runLater(() -> procesarUsuarioObtenido(user, ownerId, label))
+        );
     }
 
     private void procesarUsuarioObtenido(UserDto user, String ownerId, Label label) {
-        if (user != null) {
-            if (user.username() != null) {
-                userCache.put(ownerId, user);
-                label.setText("@" + user.username());
-                configurarClicAutor(label, user);
-                return;
-            }
+        if (user != null && user.username() != null) {
+            userCache.put(ownerId, user);
+            label.setText("@" + user.username());
+            configurarClicAutor(label, user);
+            return;
         }
-        
-        label.setText("@Usuario");
+        label.setText(TEXT_USUARIO_DEF);
     }
 
     private void configurarClicAutor(Label label, UserDto user) {
-        String baseStyle = label.getStyle();
-        
-        if (baseStyle == null) {
-            baseStyle = "";
-        }
-        
+        String baseStyle = label.getStyle() != null ? label.getStyle() : "";
         label.setStyle(baseStyle + " -fx-cursor: hand; -fx-underline: true; -fx-text-fill: " + AppConstants.COLOR_ACCENT + ";");
-        
-        label.setOnMouseClicked(e -> {
-            App.showProfileView(user);
-        });
+        label.setOnMouseClicked(e -> App.showProfileView(user));
     }
 
     private void cargarComentariosUI(String rId, VBox container, int page) {
         if (page == 1) {
             container.getChildren().clear();
             container.setStyle("-fx-padding: 0 0 0 20; -fx-border-color: #333; -fx-border-width: 0 0 0 2;");
-            
             if (SessionManager.getInstance().isAuthenticated()) {
                 agregarFormularioComentario(rId, container);
             }
@@ -1270,29 +1001,23 @@ public class ShowDetailController {
             removerBotonCargarMasComentarios(container);
         }
         
-        reviewService.getReviewComments(rId, page).thenAccept(res -> {
-            Platform.runLater(() -> {
-                procesarComentariosObtenidos(res, rId, container, page);
-            });
-        });
+        reviewService.getReviewComments(rId, page).thenAccept(res -> 
+            Platform.runLater(() -> procesarComentariosObtenidos(res, rId, container, page))
+        );
     }
 
     private void procesarComentariosObtenidos(CommentPaginationResponse res, String rId, VBox container, int page) {
-        if (res != null) {
-            if (res.comments() != null) {
-                for (CommentDto c : res.comments()) {
-                    container.getChildren().add(buildCommentItem(c, rId, container));
-                }
-                
-                evaluarBotonCargarMasComentarios(rId, container, res.pagination(), page);
+        if (res != null && res.comments() != null) {
+            for (CommentDto c : res.comments()) {
+                container.getChildren().add(buildCommentItem(c, rId, container));
             }
+            evaluarBotonCargarMasComentarios(rId, container, res.pagination(), page);
         }
     }
 
     private void removerBotonCargarMasComentarios(VBox container) {
         if (!container.getChildren().isEmpty()) {
             int lastIndex = container.getChildren().size() - 1;
-            
             if (container.getChildren().get(lastIndex) instanceof HBox) {
                 container.getChildren().remove(lastIndex);
             }
@@ -1300,36 +1025,27 @@ public class ShowDetailController {
     }
 
     private void evaluarBotonCargarMasComentarios(String rId, VBox container, PaginationDto pag, int currentPage) {
-        if (pag != null) {
-            if (pag.hasNextPage() != null) {
-                if (pag.hasNextPage()) {
-                    Button btnMore = new Button("Cargar más comentarios");
-                    btnMore.setStyle("-fx-background-color: transparent; -fx-text-fill: #aaaaaa; -fx-cursor: hand; -fx-underline: true;");
-                    
-                    btnMore.setOnAction(e -> {
-                        cargarComentariosUI(rId, container, currentPage + 1);
-                    });
-                    
-                    HBox centerBox = new HBox(btnMore);
-                    centerBox.setAlignment(Pos.CENTER_LEFT);
-                    container.getChildren().add(centerBox);
-                }
-            }
+        if (pag != null && Boolean.TRUE.equals(pag.hasNextPage())) {
+            Button btnMore = new Button("Cargar más comentarios");
+            btnMore.setStyle(STYLE_BTN_TRANSPARENT_GREY);
+            btnMore.setOnAction(e -> cargarComentariosUI(rId, container, currentPage + 1));
+            HBox centerBox = new HBox(btnMore);
+            centerBox.setAlignment(Pos.CENTER_LEFT);
+            container.getChildren().add(centerBox);
         }
     }
 
     private void agregarFormularioComentario(String rId, VBox container) {
         TextField in = new TextField(); 
         in.setPromptText("Comentar...");
-        in.setStyle("-fx-control-inner-background: #2a2a2a; -fx-text-inner-color: white;");
+        in.setStyle(STYLE_INPUT_BG);
         
         Label cFileLabel = new Label("");
         cFileLabel.setTextFill(Color.GRAY);
         cFileLabel.setStyle("-fx-font-size: 10px;");
 
         Button imgBtn = new Button("📷");
-        imgBtn.setStyle("-fx-background-color: #333; -fx-text-fill: white; -fx-cursor: hand;");
-        
+        imgBtn.setStyle(STYLE_BTN_DARK_GREY);
         imgBtn.setOnAction(e -> {
             File f = openImageChooser();
             if (f != null) {
@@ -1340,18 +1056,10 @@ public class ShowDetailController {
 
         Button b = new Button("Enviar"); 
         b.setStyle("-fx-background-color: #555; -fx-text-fill: white; -fx-cursor: hand;");
+        b.setOnAction(e -> procesarEnvioComentario(in, rId, container));
         
-        b.setOnAction(e -> {
-            procesarEnvioComentario(in, rId, container);
-        });
-        
-        HBox box = new HBox(10);
-        box.getChildren().add(in);
-        box.getChildren().add(imgBtn);
-        box.getChildren().add(b);
-        
-        container.getChildren().add(box);
-        container.getChildren().add(cFileLabel);
+        HBox box = new HBox(10, in, imgBtn, b);
+        container.getChildren().addAll(box, cFileLabel);
     }
     
     private void procesarEnvioComentario(TextField in, String rId, VBox container) {
@@ -1364,12 +1072,13 @@ public class ShowDetailController {
         if (in.getText().isBlank()) {
             return;
         }
+        
         CommentRequest req = new CommentRequest(in.getText().trim());
         File img = selectedCommentImages.get(rId);
         
-        reviewService.createComment(rId, req, img).thenAccept(comment -> {
-            refrescarComentarios(rId, container);
-        }).exceptionally(err -> {
+        reviewService.createComment(rId, req, img).thenAccept(comment -> 
+            refrescarComentarios(rId, container)
+        ).exceptionally(err -> {
             Platform.runLater(() -> {
                 if (!App.procesarErrorCritico(err)) {
                     mostrarAlertaError(AppConstants.MESSAGE_ERROR_REVIEW_ACTION);
@@ -1389,34 +1098,23 @@ public class ShowDetailController {
     private VBox buildCommentItem(CommentDto c, String rId, VBox parent) {
         String cId = c.getSafeId();
         VBox box = new VBox(5); 
-        box.setStyle("-fx-background-color: #1a1a1a; -fx-padding: 8; -fx-background-radius: 5;");
+        box.setStyle(STYLE_COMMENT_BG);
         
         Label user = new Label("@Cargando..."); 
         resolverNombreAutor(c.getOwnerId(), user);
-        
         HBox header = buildHeaderWithDate(user, c.created_at(), c.updated_at());
         
-        String txtContent = "";
-        
-        if (c.content() != null) {
-            txtContent = c.content();
-        }
-        
-        Label txt = new Label(txtContent); 
+        Label txt = new Label(c.content() != null ? c.content() : ""); 
         txt.setTextFill(Color.WHITE);
         
-        box.getChildren().add(header);
-        box.getChildren().add(txt);
-        
+        box.getChildren().addAll(header, txt);
         inyectarImagenSiExiste(c.getImageUrl(), box);
         
         HBox actions = new HBox(10);
-        
         HBox likeContainer = buildLikeButtonsComentario(cId, c.getLikesCount(), c.getIsLikedValue());
         
         actions.getChildren().add(likeContainer);
         injectCommentActions(c, actions, rId, parent);
-        
         box.getChildren().add(actions);
         
         return box;
@@ -1431,48 +1129,31 @@ public class ShowDetailController {
         
         actualizarEstadoBotonesLike(btnLike, btnUnlike, isLiked);
         
-        if (!SessionManager.getInstance().isAuthenticated()) {
-            deshabilitarBotonesCompletamente(btnLike, btnUnlike);
-            container.getChildren().addAll(btnLike, btnUnlike);
-            return container;
-        }
-        
-        if (rId.isEmpty()) {
+        if (!SessionManager.getInstance().isAuthenticated() || rId.isEmpty()) {
             deshabilitarBotonesCompletamente(btnLike, btnUnlike);
             container.getChildren().addAll(btnLike, btnUnlike);
             return container;
         }
         
         int[] countState = new int[]{initialCount};
+        btnLike.setOnAction(e -> procesarLikeResena(rId, btnLike, btnUnlike, countState));
+        btnUnlike.setOnAction(e -> procesarUnlikeResena(rId, btnLike, btnUnlike, countState));
         
-        btnLike.setOnAction(e -> {
-            procesarLikeResena(rId, btnLike, btnUnlike, countState);
-        });
-        
-        btnUnlike.setOnAction(e -> {
-            procesarUnlikeResena(rId, btnLike, btnUnlike, countState);
-        });
-        
-        container.getChildren().add(btnLike);
-        container.getChildren().add(btnUnlike);
-        
+        container.getChildren().addAll(btnLike, btnUnlike);
         return container;
     }
 
     private void procesarLikeResena(String rId, Button btnLike, Button btnUnlike, int[] countState) {
         btnLike.setDisable(true);
-        
-        reviewService.toggleReviewLike(rId, false).thenRun(() -> {
+        reviewService.toggleReviewLike(rId, false).thenRun(() -> 
             Platform.runLater(() -> {
                 countState[0]++;
                 btnLike.setText("👍 " + countState[0]);
                 actualizarEstadoBotonesLike(btnLike, btnUnlike, true);
-            });
-        }).exceptionally(err -> {
+            })
+        ).exceptionally(err -> {
             Platform.runLater(() -> {
-                if (!App.procesarErrorCritico(err)) {
-                    btnLike.setDisable(false);
-                }
+                if (!App.procesarErrorCritico(err)) btnLike.setDisable(false);
             });
             return null;
         });
@@ -1480,18 +1161,15 @@ public class ShowDetailController {
 
     private void procesarUnlikeResena(String rId, Button btnLike, Button btnUnlike, int[] countState) {
         btnUnlike.setDisable(true);
-        
-        reviewService.toggleReviewLike(rId, true).thenRun(() -> {
+        reviewService.toggleReviewLike(rId, true).thenRun(() -> 
             Platform.runLater(() -> {
                 countState[0] = Math.max(0, countState[0] - 1);
                 btnLike.setText("👍 " + countState[0]);
                 actualizarEstadoBotonesLike(btnLike, btnUnlike, false);
-            });
-        }).exceptionally(err -> {
+            })
+        ).exceptionally(err -> {
             Platform.runLater(() -> {
-                if (!App.procesarErrorCritico(err)) {
-                    btnUnlike.setDisable(false);
-                }
+                if (!App.procesarErrorCritico(err)) btnUnlike.setDisable(false);
             });
             return null;
         });
@@ -1506,48 +1184,31 @@ public class ShowDetailController {
         
         actualizarEstadoBotonesLike(btnLike, btnUnlike, isLiked);
         
-        if (!SessionManager.getInstance().isAuthenticated()) {
-            deshabilitarBotonesCompletamente(btnLike, btnUnlike);
-            container.getChildren().addAll(btnLike, btnUnlike);
-            return container;
-        }
-        
-        if (cId.isEmpty()) {
+        if (!SessionManager.getInstance().isAuthenticated() || cId.isEmpty()) {
             deshabilitarBotonesCompletamente(btnLike, btnUnlike);
             container.getChildren().addAll(btnLike, btnUnlike);
             return container;
         }
         
         int[] countState = new int[]{initialCount};
+        btnLike.setOnAction(e -> procesarLikeComentario(cId, btnLike, btnUnlike, countState));
+        btnUnlike.setOnAction(e -> procesarUnlikeComentario(cId, btnLike, btnUnlike, countState));
         
-        btnLike.setOnAction(e -> {
-            procesarLikeComentario(cId, btnLike, btnUnlike, countState);
-        });
-        
-        btnUnlike.setOnAction(e -> {
-            procesarUnlikeComentario(cId, btnLike, btnUnlike, countState);
-        });
-        
-        container.getChildren().add(btnLike);
-        container.getChildren().add(btnUnlike);
-        
+        container.getChildren().addAll(btnLike, btnUnlike);
         return container;
     }
 
     private void procesarLikeComentario(String cId, Button btnLike, Button btnUnlike, int[] countState) {
         btnLike.setDisable(true);
-        
-        reviewService.toggleCommentLike(cId, false).thenRun(() -> {
+        reviewService.toggleCommentLike(cId, false).thenRun(() -> 
             Platform.runLater(() -> {
                 countState[0]++;
                 btnLike.setText("👍 " + countState[0]);
                 actualizarEstadoBotonesLike(btnLike, btnUnlike, true);
-            });
-        }).exceptionally(err -> {
+            })
+        ).exceptionally(err -> {
             Platform.runLater(() -> {
-                if (!App.procesarErrorCritico(err)) {
-                    btnLike.setDisable(false);
-                }
+                if (!App.procesarErrorCritico(err)) btnLike.setDisable(false);
             });
             return null;
         });
@@ -1555,18 +1216,15 @@ public class ShowDetailController {
 
     private void procesarUnlikeComentario(String cId, Button btnLike, Button btnUnlike, int[] countState) {
         btnUnlike.setDisable(true);
-        
-        reviewService.toggleCommentLike(cId, true).thenRun(() -> {
+        reviewService.toggleCommentLike(cId, true).thenRun(() -> 
             Platform.runLater(() -> {
                 countState[0] = Math.max(0, countState[0] - 1);
                 btnLike.setText("👍 " + countState[0]);
                 actualizarEstadoBotonesLike(btnLike, btnUnlike, false);
-            });
-        }).exceptionally(err -> {
+            })
+        ).exceptionally(err -> {
             Platform.runLater(() -> {
-                if (!App.procesarErrorCritico(err)) {
-                    btnUnlike.setDisable(false);
-                }
+                if (!App.procesarErrorCritico(err)) btnUnlike.setDisable(false);
             });
             return null;
         });
@@ -1576,13 +1234,11 @@ public class ShowDetailController {
         if (isLiked) {
             btnLike.setDisable(true);
             btnLike.setStyle("-fx-background-color: #e50914; -fx-text-fill: white; -fx-background-radius: 4; -fx-opacity: 1; -fx-font-weight: bold;");
-            
             btnUnlike.setDisable(false);
-            btnUnlike.setStyle("-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4;");
+            btnUnlike.setStyle(STYLE_BTN_DARK_GREY_RADIUS);
         } else {
             btnLike.setDisable(false);
-            btnLike.setStyle("-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-cursor: hand; -fx-background-radius: 4;");
-            
+            btnLike.setStyle(STYLE_BTN_DARK_GREY_RADIUS);
             btnUnlike.setDisable(true);
             btnUnlike.setStyle("-fx-background-color: #1a1a1a; -fx-text-fill: #555555; -fx-background-radius: 4; -fx-opacity: 1;");
         }
@@ -1591,184 +1247,148 @@ public class ShowDetailController {
     private void deshabilitarBotonesCompletamente(Button btnLike, Button btnUnlike) {
         btnLike.setDisable(true);
         btnUnlike.setDisable(true);
-        
         btnLike.setStyle("-fx-background-color: #1a1a1a; -fx-text-fill: #555555; -fx-background-radius: 4; -fx-opacity: 1;");
         btnUnlike.setStyle("-fx-background-color: #1a1a1a; -fx-text-fill: #555555; -fx-background-radius: 4; -fx-opacity: 1;");
     }
 
     private boolean isWithinEditWindow(String createdAtStr) {
-        if (createdAtStr == null) {
+        if (createdAtStr == null || createdAtStr.isEmpty()) {
             return false;
         }
-        
-        if (createdAtStr.isEmpty()) {
-            return false;
-        }
-        
         try {
             ZonedDateTime created = ZonedDateTime.parse(createdAtStr);
             ZonedDateTime now = ZonedDateTime.now(ZoneOffset.UTC);
-            long mins = ChronoUnit.MINUTES.between(created, now);
-            
-            if (mins <= 30) {
-                return true;
-            }
-            
-            return false;
+            return ChronoUnit.MINUTES.between(created, now) <= 30;
         } catch (Exception e) {
             return false;
         }
     }
 
     private void agregarBotonEliminarResena(String rId, HBox actions) {
-        Button del = new Button("Eliminar");
-        del.setStyle("-fx-background-color: transparent; -fx-text-fill: #e50914; -fx-cursor: hand; -fx-underline: true;");
-        
+        Button del = new Button(TEXT_ELIMINAR);
+        del.setStyle(STYLE_BTN_TRANSPARENT_RED);
         del.setOnAction(e -> {
             if (confirmarAccion("Eliminar Reseña", "¿Estás seguro de que deseas eliminar tu reseña?")) {
-                reviewService.deleteReview(rId).thenRun(() -> {
+                reviewService.deleteReview(rId).thenRun(() -> 
                     Platform.runLater(() -> {
                         this.currentReviewPage = 1;
                         cargarResenas(1);
-                    });
-                }).exceptionally(err -> {
+                    })
+                ).exceptionally(err -> {
                     App.procesarErrorCritico(err);
                     return null;
                 });
             }
         });
-        
         actions.getChildren().add(del);
     }
 
     private void agregarBotonesAdminResena(ReviewDto review, HBox actions) {
-        Button delAdmin = new Button("Eliminar");
-        delAdmin.setStyle("-fx-background-color: transparent; -fx-text-fill: #ff9800; -fx-cursor: hand; -fx-underline: true;");
-
+        Button delAdmin = new Button(TEXT_ELIMINAR);
+        delAdmin.setStyle(STYLE_BTN_TRANSPARENT_ORANGE);
         delAdmin.setOnAction(e -> {
             if (confirmarAccion("Eliminar Reseña", "¿Deseas eliminar administrativamente esta reseña?")) {
-                adminService.deleteReviewDirectly(review.getSafeId()).thenRun(() -> {
+                adminService.deleteReviewDirectly(review.getSafeId()).thenRun(() -> 
                     Platform.runLater(() -> {
                         mostrarAlertaExito("Reseña eliminada administrativamente.");
                         this.currentReviewPage = 1;
                         cargarResenas(1);
-                    });
-                }).exceptionally(err -> {
+                    })
+                ).exceptionally(err -> {
                     Platform.runLater(() -> {
-                        if (!App.procesarErrorCritico(err)) {
-                            mostrarAlertaError(AppConstants.MESSAGE_ERROR_API);
-                        }
+                        if (!App.procesarErrorCritico(err)) mostrarAlertaError(AppConstants.MESSAGE_ERROR_API);
                     });
                     return null;
                 });
             }
         });
-
         actions.getChildren().add(delAdmin);
 
         if (review.getImageUrl() != null && !review.getImageUrl().isEmpty()) {
-            Button delImgAdmin = new Button("Quitar Imagen");
-            delImgAdmin.setStyle("-fx-background-color: transparent; -fx-text-fill: #ff9800; -fx-cursor: hand; -fx-underline: true;");
-
+            Button delImgAdmin = new Button(TEXT_QUITAR_IMAGEN);
+            delImgAdmin.setStyle(STYLE_BTN_TRANSPARENT_ORANGE);
             delImgAdmin.setOnAction(e -> {
-                if (confirmarAccion("Quitar Imagen", "¿Deseas eliminar la imagen de esta reseña?")) {
-                    adminService.removeReviewImageDirectly(review.getSafeId()).thenRun(() -> {
+                if (confirmarAccion(TEXT_QUITAR_IMAGEN, "¿Deseas eliminar la imagen de esta reseña?")) {
+                    adminService.removeReviewImageDirectly(review.getSafeId()).thenRun(() -> 
                         Platform.runLater(() -> {
                             mostrarAlertaExito("Imagen eliminada administrativamente.");
                             this.currentReviewPage = 1;
                             cargarResenas(1);
-                        });
-                    }).exceptionally(err -> {
+                        })
+                    ).exceptionally(err -> {
                         Platform.runLater(() -> {
-                            if (!App.procesarErrorCritico(err)) {
-                                mostrarAlertaError(AppConstants.MESSAGE_ERROR_API);
-                            }
+                            if (!App.procesarErrorCritico(err)) mostrarAlertaError(AppConstants.MESSAGE_ERROR_API);
                         });
                         return null;
                     });
                 }
             });
-
             actions.getChildren().add(delImgAdmin);
         }
     }
     
     private void agregarBotonEliminarComentario(String cId, String rId, VBox parent, HBox actions) {
-        Button del = new Button("Eliminar");
-        del.setStyle("-fx-background-color: transparent; -fx-text-fill: #e50914; -fx-cursor: hand; -fx-underline: true;");
-        
+        Button del = new Button(TEXT_ELIMINAR);
+        del.setStyle(STYLE_BTN_TRANSPARENT_RED);
         del.setOnAction(e -> {
             if (confirmarAccion("Eliminar Comentario", "¿Estás seguro de que deseas eliminar tu comentario?")) {
-                reviewService.deleteComment(cId).thenRun(() -> {
-                    Platform.runLater(() -> cargarComentariosUI(rId, parent, 1));
-                }).exceptionally(err -> {
+                reviewService.deleteComment(cId).thenRun(() -> 
+                    Platform.runLater(() -> cargarComentariosUI(rId, parent, 1))
+                ).exceptionally(err -> {
                     App.procesarErrorCritico(err);
                     return null;
                 });
             }
         });
-        
         actions.getChildren().add(del);
     }
 
     private void agregarBotonesAdminComentario(CommentDto c, String rId, VBox parent, HBox actions) {
-        Button delAdmin = new Button("Eliminar");
-        delAdmin.setStyle("-fx-background-color: transparent; -fx-text-fill: #ff9800; -fx-cursor: hand; -fx-underline: true;");
-
+        Button delAdmin = new Button(TEXT_ELIMINAR);
+        delAdmin.setStyle(STYLE_BTN_TRANSPARENT_ORANGE);
         delAdmin.setOnAction(e -> {
             if (confirmarAccion("Eliminar Comentario", "¿Deseas eliminar administrativamente este comentario?")) {
-                adminService.deleteCommentDirectly(c.getSafeId()).thenRun(() -> {
+                adminService.deleteCommentDirectly(c.getSafeId()).thenRun(() -> 
                     Platform.runLater(() -> {
                         mostrarAlertaExito("Comentario eliminado administrativamente.");
                         cargarComentariosUI(rId, parent, 1);
-                    });
-                }).exceptionally(err -> {
+                    })
+                ).exceptionally(err -> {
                     Platform.runLater(() -> {
-                        if (!App.procesarErrorCritico(err)) {
-                            mostrarAlertaError(AppConstants.MESSAGE_ERROR_API);
-                        }
+                        if (!App.procesarErrorCritico(err)) mostrarAlertaError(AppConstants.MESSAGE_ERROR_API);
                     });
                     return null;
                 });
             }
         });
-
         actions.getChildren().add(delAdmin);
 
         if (c.getImageUrl() != null && !c.getImageUrl().isEmpty()) {
-            Button delImgAdmin = new Button("Quitar Imagen");
-            delImgAdmin.setStyle("-fx-background-color: transparent; -fx-text-fill: #ff9800; -fx-cursor: hand; -fx-underline: true;");
-
+            Button delImgAdmin = new Button(TEXT_QUITAR_IMAGEN);
+            delImgAdmin.setStyle(STYLE_BTN_TRANSPARENT_ORANGE);
             delImgAdmin.setOnAction(e -> {
-                if (confirmarAccion("Quitar Imagen", "¿Deseas eliminar la imagen de este comentario?")) {
-                    adminService.removeCommentImageDirectly(c.getSafeId()).thenRun(() -> {
+                if (confirmarAccion(TEXT_QUITAR_IMAGEN, "¿Deseas eliminar la imagen de este comentario?")) {
+                    adminService.removeCommentImageDirectly(c.getSafeId()).thenRun(() -> 
                         Platform.runLater(() -> {
                             mostrarAlertaExito("Imagen eliminada administrativamente.");
                             cargarComentariosUI(rId, parent, 1);
-                        });
-                    }).exceptionally(err -> {
+                        })
+                    ).exceptionally(err -> {
                         Platform.runLater(() -> {
-                            if (!App.procesarErrorCritico(err)) {
-                                mostrarAlertaError(AppConstants.MESSAGE_ERROR_API);
-                            }
+                            if (!App.procesarErrorCritico(err)) mostrarAlertaError(AppConstants.MESSAGE_ERROR_API);
                         });
                         return null;
                     });
                 }
             });
-
             actions.getChildren().add(delImgAdmin);
         }
     }
 
     private void agregarBotonEditarResena(ReviewDto review, HBox actions, VBox card) {
         Button edit = new Button("Editar");
-        edit.setStyle("-fx-background-color: transparent; -fx-text-fill: #4caf50; -fx-cursor: hand; -fx-underline: true;");
-        
-        edit.setOnAction(e -> {
-            mostrarFormularioEdicion(review, card);
-        });
-        
+        edit.setStyle(STYLE_BTN_TRANSPARENT_GREEN);
+        edit.setOnAction(e -> mostrarFormularioEdicion(review, card));
         actions.getChildren().add(edit);
     }
 
@@ -1781,27 +1401,21 @@ public class ShowDetailController {
         errLbl.setManaged(false);
         
         TextField titleIn = new TextField(review.title() != null ? review.title() : "");
-        titleIn.setStyle("-fx-control-inner-background: #2a2a2a; -fx-text-inner-color: white;");
+        titleIn.setStyle(STYLE_INPUT_BG);
         
-        int initialRating = 0;
-        
-        if (review.rating() != null) {
-            initialRating = review.rating();
-        }
-        
+        int initialRating = review.rating() != null ? review.rating() : 0;
         int[] ratingState = new int[]{initialRating};
         HBox starBox = buildStarRatingComponent(ratingState, initialRating);
         
         TextArea contIn = new TextArea(review.content() != null ? review.content() : "");
         contIn.setPrefRowCount(3);
-        contIn.setStyle("-fx-control-inner-background: #2a2a2a; -fx-text-inner-color: white;");
+        contIn.setStyle(STYLE_INPUT_BG);
         
         Label fileLabel = new Label("Mantener imagen actual");
         fileLabel.setTextFill(Color.GRAY);
         
         Button attachBtn = new Button("Cambiar Imagen");
-        attachBtn.setStyle("-fx-background-color: #333; -fx-text-fill: white; -fx-cursor: hand;");
-        
+        attachBtn.setStyle(STYLE_BTN_DARK_GREY);
         attachBtn.setOnAction(e -> {
             File file = openImageChooser();
             if (file != null) {
@@ -1810,40 +1424,24 @@ public class ShowDetailController {
             }
         });
         
-        HBox fileBox = new HBox(10);
+        HBox fileBox = new HBox(10, attachBtn, fileLabel);
         fileBox.setAlignment(Pos.CENTER_LEFT);
-        fileBox.getChildren().add(attachBtn);
-        fileBox.getChildren().add(fileLabel);
         
         Button saveBtn = new Button("Guardar");
         saveBtn.setStyle("-fx-background-color: #4caf50; -fx-text-fill: white; -fx-cursor: hand;");
-        
-        saveBtn.setOnAction(e -> {
-            procesarEdicionResena(review.getSafeId(), ratingState, titleIn, contIn, errLbl);
-        });
+        saveBtn.setOnAction(e -> procesarEdicionResena(review.getSafeId(), ratingState, titleIn, contIn, errLbl));
         
         Button cancelBtn = new Button("Cancelar");
-        cancelBtn.setStyle("-fx-background-color: #2a2a2a; -fx-text-fill: white; -fx-cursor: hand;");
+        cancelBtn.setStyle(STYLE_BTN_DARK_GREY);
+        cancelBtn.setOnAction(e -> limpiarYRefrescarResenas());
         
-        cancelBtn.setOnAction(e -> {
-            limpiarYRefrescarResenas();
-        });
+        HBox actionsBox = new HBox(10, saveBtn, cancelBtn);
         
-        HBox actionsBox = new HBox(10);
-        actionsBox.getChildren().add(saveBtn);
-        actionsBox.getChildren().add(cancelBtn);
-        
-        card.getChildren().add(new Label("Editar reseña:"));
-        card.getChildren().add(errLbl);
-        card.getChildren().add(titleIn);
-        card.getChildren().add(starBox);
-        card.getChildren().add(contIn);
-        card.getChildren().add(fileBox);
-        card.getChildren().add(actionsBox);
+        card.getChildren().addAll(new Label("Editar reseña:"), errLbl, titleIn, starBox, contIn, fileBox, actionsBox);
     }
 
     private void procesarEdicionResena(String rId, int[] ratingState, TextField titleIn, TextArea contIn, Label errLbl) {
-        if (ratingState[0] == 0 || titleIn.getText().isBlank() || contIn.getText().isBlank()) {
+        if (ratingState == null || ratingState.length == 0 || ratingState[0] == 0 || titleIn.getText().isBlank() || contIn.getText().isBlank()) {
             return;
         }
         
@@ -1858,14 +1456,10 @@ public class ShowDetailController {
                 reviewService.uploadReviewImage(review.getSafeId(), img).thenRun(() -> finalizarEdicionResena(rId));
                 return;
             }
-            
             finalizarEdicionResena(rId);
-            
         }).exceptionally(err -> {
             Platform.runLater(() -> {
-                if (!App.procesarErrorCritico(err)) {
-                    mostrarAlertaError(AppConstants.MESSAGE_ERROR_REVIEW_ACTION);
-                }
+                if (!App.procesarErrorCritico(err)) mostrarAlertaError(AppConstants.MESSAGE_ERROR_REVIEW_ACTION);
             });
             return null;
         });
@@ -1884,12 +1478,11 @@ public class ShowDetailController {
         try {
             FXMLLoader l = new FXMLLoader(getClass().getResource(AppConstants.FXML_SHOW_CARD));
             VBox card = l.load();
-            
             com.src.filmtracker.controllers.shows.ShowCardController controller = l.getController();
             controller.setData(s);
-            
             container.getChildren().add(card);
         } catch (IOException e) { 
+            // Ignorado intencionalmente al renderizar elementos gráficos
         }
     }
 
@@ -1904,73 +1497,41 @@ public class ShowDetailController {
         iv.setFitWidth(110);
         
         boolean tieneImagenPerson = false;
-        
-        if (m.person() != null) {
-            if (m.person().image() != null) {
-                if (m.person().image().medium() != null) {
-                    if (!m.person().image().medium().isEmpty()) {
-                        cargarImagenConRespaldo(m.person().image().medium(), iv);
-                        tieneImagenPerson = true;
-                    }
-                }
-            }
+        if (m.person() != null && m.person().image() != null && m.person().image().medium() != null && !m.person().image().medium().isEmpty()) {
+            cargarImagenConRespaldo(m.person().image().medium(), iv);
+            tieneImagenPerson = true;
         }
         
-        if (!tieneImagenPerson) {
-            ponerImagenError(iv);
-        }
+        if (!tieneImagenPerson) ponerImagenError(iv);
         
-        String actorName = "Desconocido";
-        
-        if (m.person() != null) {
-            if (m.person().name() != null) {
-                actorName = m.person().name();
-            }
-        }
-        
+        String actorName = m.person() != null && m.person().name() != null ? m.person().name() : TEXT_DESCONOCIDO;
         Label n = new Label(actorName); 
         n.setTextFill(Color.WHITE); 
         n.setStyle("-fx-font-weight: bold; -fx-font-size: 13px;");
         n.setWrapText(true); 
         n.setTextAlignment(TextAlignment.CENTER);
         
-        String charName = "";
-        
-        if (m.character() != null) {
-            if (m.character().name() != null) {
-                charName = m.character().name();
-            }
-        }
-        
+        String charName = m.character() != null && m.character().name() != null ? m.character().name() : "";
         Label c = new Label(charName);
         c.setTextFill(Color.GRAY); 
         c.setStyle("-fx-font-size: 12px;");
         c.setWrapText(true); 
         c.setTextAlignment(TextAlignment.CENTER);
         
-        b.getChildren().add(iv);
-        b.getChildren().add(n);
-        b.getChildren().add(c); 
-        
+        b.getChildren().addAll(iv, n, c); 
         return b;
     }
 
     private void moverCarruselDinamico(ScrollPane sp, int dir) {
-        sp.setHvalue(Math.max(0, Math.min(sp.getHvalue() + (dir * 0.2), 1)));
+        sp.setHvalue(Math.clamp(sp.getHvalue() + (dir * 0.2), 0.0, 1.0));
     }
     
     private void cargarImagenConRespaldo(String url, ImageView imageView) {
         try {
             Image img = new Image(url, true);
-            
             img.errorProperty().addListener((obs, oldVal, isError) -> {
-                if (isError) {
-                    Platform.runLater(() -> {
-                        ponerImagenError(imageView);
-                    });
-                }
+                if (isError) Platform.runLater(() -> ponerImagenError(imageView));
             });
-            
             imageView.setImage(img);
         } catch (Exception e) {
             ponerImagenError(imageView);
@@ -1982,30 +1543,26 @@ public class ShowDetailController {
             String errorPath = getClass().getResource("/com/src/filmtracker/images/error.png").toExternalForm();
             this.fallbackErrorImage = new Image(errorPath, true);
         } catch (Exception ex) {
+            // Falla silenciosa permitida para imágenes estáticas
         }
     }
 
     private void ponerImagenError(ImageView imageView) {
-        if (this.fallbackErrorImage != null) {
-            imageView.setImage(this.fallbackErrorImage);
-        }
+        if (this.fallbackErrorImage != null) imageView.setImage(this.fallbackErrorImage);
     }
     
     private HBox buildStarRatingComponent(int[] ratingState, int initialValue) {
         HBox starContainer = new HBox(5);
         starContainer.setAlignment(Pos.CENTER_LEFT);
-        
         List<Label> stars = new ArrayList<>();
         
         for (int i = 1; i <= 5; i++) {
             Label star = new Label("★");
-            star.setStyle("-fx-font-size: 28px; -fx-text-fill: #555555; -fx-cursor: hand;");
+            star.setStyle(STYLE_DISABLED_STAR);
             stars.add(star);
             starContainer.getChildren().add(star);
         }
-        
         configurarInteraccionesEstrellas(stars, ratingState, initialValue);
-        
         return starContainer;
     }
 
@@ -2016,37 +1573,22 @@ public class ShowDetailController {
         }
         
         int index = 1;
-        
         for (Label star : stars) {
             final int starValue = index;
-            
-            star.setOnMouseEntered(e -> {
-                actualizarColorEstrellas(stars, starValue);
-            });
-            
-            star.setOnMouseExited(e -> {
-                actualizarColorEstrellas(stars, ratingState[0]);
-            });
-            
+            star.setOnMouseEntered(e -> actualizarColorEstrellas(stars, starValue));
+            star.setOnMouseExited(e -> actualizarColorEstrellas(stars, ratingState[0]));
             star.setOnMouseClicked(e -> {
                 ratingState[0] = starValue;
                 actualizarColorEstrellas(stars, starValue);
             });
-            
             index++;
         }
     }
 
     private void actualizarColorEstrellas(List<Label> stars, int limit) {
         int index = 1;
-        
         for (Label star : stars) {
-            if (index <= limit) {
-                star.setStyle("-fx-font-size: 28px; -fx-text-fill: #ff9800; -fx-cursor: hand;");
-            } else {
-                star.setStyle("-fx-font-size: 28px; -fx-text-fill: #555555; -fx-cursor: hand;");
-            }
-            
+            star.setStyle(index <= limit ? STYLE_ACTIVE_STAR : STYLE_DISABLED_STAR);
             index++;
         }
     }
